platforms/envoy/scripts/envoy.yaml
static_resources:
  listeners:
    - name: ohd_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      access_log:
        - name: envoy.access_loggers.file
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
            path: /tmp/envoy-access.log
            log_format:
              text_format: '%START_TIME%\t%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\t%REQ(:METHOD)%\t%REQ(:AUTHORITY)%\t%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%\t%RESPONSE_CODE%\t%DURATION%\t%REQ(TRACEPARENT)%\t%REQ(TRACESTATE)%\t%REQ(OHD-TRACE-ID)%\t%REQ(X-ENVOY-ORIGINAL-QUERY?:QUERY)%\t%PROTOCOL%\t%BYTES_SENT%\t%REQ(REFERER)%\t%REQ(USER-AGENT)%\n'
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ohd
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: nginx_backend }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: nginx_backend
      connect_timeout: 1s
      type: STATIC
      load_assignment:
        cluster_name: nginx_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 8081 }
